# piecedetector

./: .gitignore  CMakeLists.txt  README.md  dediche.cpp  main.cpp  shapes.cpp  shapes.h
include/: detector.h  flexibowl.h  network.h  operator.h  shapes.h  types.h  utils.h
src/: CMakeLists.txt  dediche.cpp  main.cpp
src/dediche/: CMakeLists.txt  shapes.cpp
src/deriche/: CMakeLists.txt
src/detector/: CMakeLists.txt  detector.cpp  main.cpp
src/detector/operators/: blurring.cpp  canny.cpp  hough.cpp  operator.cpp  suzuki.cpp
src/flexibowl/: CMakeLists.txt  command.cpp  flexibowl.cpp  interface.cpp  magic.cpp  main.cpp
src/grabber/: .ycm_extra_conf.py  CMakeLists.txt  GenericParameterAccess.cpp  openCVGrab.cpp  openCVPlay.cpp  udpControl.cpp
src/network/: CMakeLists.txt  magic.cpp  network.cpp  udp.cpp
src/operators/: CMakeLists.txt  binary.cpp  border.cpp  filter.hpp  lines.cpp  morphological.cpp  operator.cpp  rectangle.cpp  suzuki.cpp
src/utils/: CMakeLists.txt  error.cpp  exec.cpp
